# mule-network-detection

./: .gitignore  Makefile  README.md  pyproject.toml  run_demo.py  run_model.py
.github/workflows/: ci.yml
data/aml/: README.md
docs/: aml_design.md
scripts/: make_figures.py  run_investigation.py
sql/: investigation.sql
src/aml/: aml_data.py  graph_features.py  metrics.py  model.py  scoring.py
tests/: test_graph_features.py  test_investigation.py  test_model.py
